--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "ejs": "^3.1.9",
+    "prettier": "^3.0.3",
+    "prettier-eslint": "^16.1.2",
     "vite": "^4.2.0",
     "vite-plugin-ejs": "^1.6.4"
   },
